--- a/회의록/계획서.md
+++ b/회의록/계획서.md
@@ -7,7 +7,7 @@
   - 현재 해양 쓰레기 통합 정보시스템, 하수도 정보시스템 등등은 있으나 음식물, 재활용 쓰레기 등에 대한 정보시스템 전무
   - 정책적 제안 위해서는 기본적 데이터 분석이 필요
  - 필요성
-  - 음식물 쓰레기, 재활용 쓰레기 등 현재 처리 비용이 막대하므로 예상 낭비에 일조
+  - 음식물 쓰레기, 재활용 쓰레기 등 현재 처리 비용이 막대하므로 예산 낭비에 일조
   - 음식물 쓰레기, 재활용 쓰레기 데이터를 통해 불필요한 예산 지출 감소가 필
 2. 분석 과정 계획
  - 분석 데이터 선택: 공공 데이터 내에 있는 ‘음식물쓰레기 배출정보 서비스’
